=============================
Change log for gocept.jasmine
=============================

0.2 (unreleased)
================

- Added helper function to ease test layer setup.


0.1 (2013-08-16)
================

initial release