@@ -7,6 +7,8 @@ Change log for gocept.jasmine
 
 - Added helper function to ease test layer setup.
 
+- Made it easier to debug jasmine tests in the browser.
+
 
 0.1 (2013-08-16)
 ================
